--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -213,6 +213,7 @@ pre {
 <section class='container'>
           <hgroup>
             <h1>Welcome to your Django application on OpenShift</h1>
+            <h2>Development Version</h2>
           </hgroup>
 
 
